# culinetics

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: culinetics.yaml  frontend.yaml
frontend/: README.md  biome.json  bun.lockb  index.html  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
frontend/public/recipes/: gyudon.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/assets/recipes/: chili-con-carne.json  pancakes.json
frontend/src/components/: HelloWorld.vue  RecipeCard.vue  RecipesGallery.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: index.ts  recipes.ts
frontend/src/types/: index.ts  recipe.ts
frontend/src/views/: Home.vue  Recipe.vue
public/: tailwind.css
public/recipes/: pancakes.json
src/: main.rs  recipes.rs  tailwind.rs
src/components/: mod.rs  recipe_card.rs
src/pages/: home.rs
