[package]
name = "culinetics"
version = "0.1.0"
authors = ["Hendric Eckelt <hendric.eckelt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["web", "router"] }
dioxus-logger = "0.5.1"
manganis = "0.2.2"
tracing = "0.1.40"
